bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - GroupedProduction2 (Optimized, ObjectId).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: site_label, wtur_label, year, month, day, hour, minute_10, ENC_PT(<uuid>) AS avg_val
  Aggregate: groupBy=[[site_label AS site_label, wtur_label AS wtur_label, ENC_PT(year) AS year, ENC_PT(month) AS month, ENC_PT(day) AS day, ENC_PT(hour) AS hour, ENC_PT(minute_10) AS minute_10]], aggr=[[AVG(ENC_TF(val)) AS <uuid>]]
    Projection: site_label, wtur_label, val, minute_10, hour, day, month, year
      DecodeObjectIds: columns=[val]
        Filter: EBV(EQ(ENC_TF(site_label), Union 2:{value:Wind Mountain,language:})) AND (EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A1,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A2,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A3,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A4,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A5,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A6,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A7,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A8,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A9,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A10,language:}))) AND EBV(GEQ(ENC_TF(t), Union 5:{date_time_type:0,value:63797446013.000000000000000000,offset:})) AND EBV(LEQ(ENC_TF(t), Union 5:{date_time_type:0,value:63797492813.000000000000000000,offset:}))
          DecodeObjectIds: columns=[site_label, wtur_label]
            Projection: site, site_label, wtur_asp, wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val, t, minute_10, hour, day, month, YEAR(ENC_TF(t)) AS year
              Projection: site, site_label, wtur_asp, wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val, t, minute_10, hour, day, MONTH(ENC_TF(t)) AS month
                Projection: site, site_label, wtur_asp, wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val, t, minute_10, hour, DAY(ENC_TF(t)) AS day
                  Projection: site, site_label, wtur_asp, wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val, t, minute_10, HOURS(ENC_TF(t)) AS hour
                    Projection: site, site_label, wtur_asp, wtur_label, wtur, gensys_asp, gensys, generator_asp, generator, ts, dp, val, t, MUL(Union 4:4:10, FLOOR(DIV(MINUTES(ENC_TF(t)), Union 4:2:Some(<uuid>),36,18))) AS minute_10
                      BasicGraphPattern: columns_to_decode=[t], 
                        QuadPattern: triple_pattern=[?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>]
                        QuadPattern: triple_pattern=[?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label]
                        QuadPattern: triple_pattern=[?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp]
                        QuadPattern: triple_pattern=[?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label]
                        QuadPattern: triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp]
                        QuadPattern: triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp]
                        QuadPattern: triple_pattern=[?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>]
                        QuadPattern: triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp]
                        QuadPattern: triple_pattern=[?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>]
                        QuadPattern: triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp]
                        QuadPattern: triple_pattern=[?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp]
                        QuadPattern: triple_pattern=[?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>]
                        QuadPattern: triple_pattern=[?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts]
                        QuadPattern: triple_pattern=[?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"]
                        QuadPattern: triple_pattern=[?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp]
                        QuadPattern: triple_pattern=[?dp <https://github.com/magbak/chrontext#hasValue> ?val]
                        QuadPattern: triple_pattern=[?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t]
